# dotfiles

./: .Xresources  .alias  .bash_profile  .bashrc  .gitconfig  .gitignore  .gitmodules  .picom.conf  .projectile  .tmux.conf  .vimrc  .xinitrc  .zprofile  .zshrc  README.md  README.org  bootstrap.sh  cat  install.sh  symlink.sh
.config/: compton.conf
.config/awesome/: awesome  rc.lua
.config/dunst/: dunstrc
.config/gtk-3.0/: gtk.css
.config/kitty/: kitty.conf
.config/mpd/: database  log  mpd.conf  state  sticker.sql
.config/openbox/: autostart  menu.xml  rc.xml
.config/termite/: config
.config/tint2/: arc  arcdark  red  (+3 more)
.emacs.d/: init.el
.i3/: config  i3blocks.conf
.mpd/: mpd.conf
.ncmpcpp/: bindings  config
.weechat/: weechat.conf
bash/: .alias  .bash_profile  .bashrc  .env  .path  .shell-start
cat/: cat
compton/: .compton.conf
emacs/: .emacs
javascript/: .tern-config
keys/: .Xmodmap
misc/: .ctags  .eslintrc.json  .tern-config
screenshots/: README.org
scripts/: ask.sh  bar.sh  fetch.sh  lock.sh  macchanger.sh  musickeys.sh  pathogen-install.sh  rofi.sh  screenshot.sh  startup.sh  symlink.sh  vim-plugins.sh
shell/: .alias  .bashrc  .env  .profile  .shell-start  .zshrc
spacemacs/: .spacemacs
startpage/: index.html  main.css
tmux/: .tmux.conf
vim/: .vimrc
vim-minimal/: .vimrc
vimperator/: .vimperatorrc
xmonad/: .xmobarrc
xmonad/.xmonad/: .gitignore  build  my-xmonad.cabal  stack.yaml  xmonad.hs
xmonad/.xmonad/Lib/: WalColors.hs
xmonad/.xmonad/lib/: WalColors.hs
yabai/: .skhdrc  .yabairc
zsh/: .zshrc
(+206 files in other folders)
