name:                my-xmonad
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable my-xmonad
  main-is:             ../xmonad.hs
  other-modules:       WalColors
  build-depends:       base
                     , aeson >= 1.4.4
                     , bytestring >= 0.10.8.2
                     , containers >= 0.6.0.1
                     , directory >= 1.3.3.0
                     , xmonad >= 0.13
                     , xmonad-contrib >= 0.13
  hs-source-dirs:      Lib
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -threaded
